--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,79 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.style-table{
+ 
+    margin-left: auto;
+    margin-right: auto;
+  
+}
+/* .style-tablebody{
 
+  margin-right: auto;
+} */
+.create{
+border: 1px solid #ffff;
+background-color: #282c34;
+color: aliceblue;
+margin-left:9px ;
+border-radius: 3px;
+padding-top: 3px;
+padding-bottom: 3px;
+}
+.create:hover{
+  background-color: rgb(87, 5, 5);
+  border: 1px solid #110101;
+}
+.modal{
+positon:fixed;
+z-index: 1;
+padding-top: 100px;
+left:0;
+top:0;
+margin-left: 40px;
+align-self: center;
+width: 80%;
+border-radius: 14px;
+border: 4px solid #9d14ec52;
+height: 100%;
+overflow: auto;
+background-color: rgb(255, 253, 253);
+/* background-color: rgb(255, 1, 1); */
+}
+.modal-content{
+  background-color: rgb(56, 56, 51);
+  margin: auto;
+  padding: 10px 20px;
+  border: 1px solid #ffff;
+  width: 40%;  
+}
+textarea{
+  width:100%;
+  height:150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ffff;
+  border-radius: 4px;
+  background-color: aliceblue;
+  font-size:16px;
+  resize: none;
+}
+.inner{
+ text-align: left;
+ padding: 20px; 
+}
+.close 
+{
+  color: rgba(240, 255, 255, 0.342);
+  float:right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,.close:focus{
+  color: black;
+  cursor: pointer;
+
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -26,6 +98,53 @@
 
 .App-link {
   color: #61dafb;
+}
+.box{
+  background-color: aliceblue;
+  width: 300px;
+  border-radius: 6px;
+  margin: 0 auto 0 auto;
+  margin-top: 15px;
+  padding: 0px 0px 70px 0px ;
+  border: #61dafb 4px solid;
+}
+.email{
+  margin:10px;
+  background: #61dafb;
+  border: #282c34 1px solid;
+  padding: 8px;
+  width: 250px;
+  border-radius: 7px;
+}
+.password{
+  margin:10px;
+  background: #61dafb;
+  border: #282c34 1px solid;
+  padding: 8px;
+  width: 250px;
+  border-radius: 7px;
+}
+.btn{
+
+  width: 125px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: azure;
+  border-radius: 4px;
+  
+  margin-top:28px;
+  margin-left: 80px ;
+  border:#282c34 1px solid;
+background-color: blue;
+  font-weight: 800;
+}
+.btn:hover{
+  border: #61dafb 1px solid;
+  background: #282c34;
+}
+.app{
+  width: 100%;
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
